--- a/ansible/jump/ansible.cfg
+++ b/ansible/jump/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 roles_path = ../roles
-remote_user = ec2-user
+remote_user = ubuntu
 
 [ssh_connection]
 ssh_args = -o StrictHostKeyChecking=no
